# ft_linear_regression

./: .gitignore  README.md  pyproject.toml  setup_project.sh  theta_values.json
assets/: data.csv  testDataSet.csv
linear_regression/: predict.py  tools.py  train.py
tests/: test.py  test_tools.py
