[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["Alexvc23 <alexandervalencia1994@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.3"
pandas = "^2.2.3"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
